# rusteze

./: .aider.conf.yml  .aider.model.metadata.json  .gitignore  AIDER_INSTRUCTIONS.md  Cargo.toml  Modelfile.qwen2.5-coder-7b-32k  Modelfile.qwen3-32k  create-model.sh  dev.sh  dev_llama.sh  dev_vllm.sh  devfs.rs  gdt.rs  idt.rs  pci.rs  physical_memory.rs  process_manager.rs  ps2_mouse.rs  serial.rs  shell.rs  start_vllm.sh  tss.rs  }
kernel/src/: lib.rs
src/: ata.rs  devfs.rs  dir.rs  elf.rs  gdt.rs  heap.rs  idt.rs  init.rs  initramfs.rs  keyboard.rs  lib.rs  paging.rs  pci.rs  physical_memory.rs  pit.rs  process.rs  procfs.rs  ps2_mouse.rs  serial.rs  shell.rs  shell.rs.backup  syscall.rs  tmpfs.rs  vfs.rs  vga.rs
